--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
         <h1>style="text-align: center">Sobre a Barbearia Alura</h1>
