--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         <img src="img/banner.jpg" alt="banner da Barbearia">
 
-        <h1> Sobre a Barbearia Alura </h1>
-        <div>  <h1>Sobre a Barbearia Alura</h1>
+        <div class="principal">  
+            <h1>Sobre a Barbearia Alura</h1>
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
             Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -24,14 +24,17 @@
             O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
         </div>
 
-        <div> 
+        <div class="beneficios"> 
             <h2>benefícios</h2>
             
-            * Atendimento aos clientes
-            * Espaço diferenciado
-            * Localização
-            * profissionais Qualificados
+            <ul>
+                <li class="itens">Atendimento aos Clientes</li>
+                <li class="itens">Espaço diferenciado</li>
+                <li class="itens">Localização</li>
+                <li class="itens">Profissionais Qualificados</li>
+            </ul>
 
+            <img src="beneficios.jpg" class="imagembeneficios">
         </div>
 
     </body>
