--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <li class="itens">Profissionais Qualificados</li>
             </ul>
 
-            <img src="beneficios.jpg" class="imagembeneficios">
+            <img src="img/beneficios.jpg" alt="benefícios da Barbearia"  class="imagembeneficios">
+            
         </div>
 
     </body>
