--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     </head>
     <body>
-
+        <header>
+            Barbearia Alura
+        </header>
         <img src="img/banner.jpg" alt="banner da Barbearia">
 
         <div class="principal">  
