--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </head>
     <body>
         <header>
-            Barbearia Alura
+            <h1 class="titulo-principal"> Barbearia Alura </h1>
         </header>
         <img src="img/banner.jpg" alt="banner da Barbearia">
 
         <div class="principal">  
-            <h1>Sobre a Barbearia Alura</h1>
+            <h2>Sobre a Barbearia Alura</h2>
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
             Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="beneficios"> 
-            <h2>benefícios</h2>
+            <h3>benefícios</h3>
             
             <ul>
                 <li class="itens">Atendimento aos Clientes</li>
