--- a/produtos.html
+++ b/produtos.html
@@ -25,19 +25,19 @@
             <ul class="produtos">
                 <li>
                     <h2>Cabelo</h2>
-                    <img src="cabelo.jpg">
+                    <img src="img/cabelo.jpg">
                     <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
                     <p class="produto-preco">R$ 25,00</p>
                 </li>
                 <li>
                     <h2>Barba</h2>
-                    <img src="barba.jpg">
+                    <img src="img/barba.jpg">
                     <p class="produto-descricao">Corte e desenho profissional de barba</p>
                     <p class="produto-preco">R$ 18,00</p>
                 </li>
                 <li>
                     <h2>Cabelo + Barba</h2>
-                    <img src="cabelo+barba.jpg">
+                    <img src="img/cabelo+barba.jpg">
                     <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                     <p class="produto-preco">R$ 35,00</p>
                 </li>
@@ -45,7 +45,7 @@
         </main>
         
         <footer>
-            <img src="logo-branco.png" alt="">
+            <img src="img/logo-branco.png" alt="">
             <p class="copyright">&copy; Copyright Barbearia Alura -
             2023 por  Rafael Adriano De Lima Ferreira</p>
         </footer>
